--- a/src/style.css
+++ b/src/style.css
@@ -413,3 +413,25 @@ img {
 .slides img:hover {
   transform: translateZ(20px);
 }
+
+/* ==========================================================================
+      Sobre Nós
+========================================================================= */
+
+.carousel-16-9 {
+  position: relative;
+  padding-top: 56.25%; /* 16:9 aspect ratio (9 dividido por 16) */
+}
+
+.carousel-16-9 .carousel-inner {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.carousel-16-9 .carousel-inner img {
+  object-fit: cover;
+}
+
