adicionando captcha na trabalhe conosco, criação da script.js e adição do link de javascrpt em cada pagina

--- a/src/style.css
+++ b/src/style.css
@@ -359,6 +359,12 @@ img {
   .form-1check{
     margin-top: 40px;
   }
+
+  #captchaImage {
+    width: 200px;
+    height: 75px;
+    border: 1px solid #ccc;
+}
 /* ==========================================================================
       HOME
 ========================================================================= */
