add estilização home

--- a/src/style.css
+++ b/src/style.css
@@ -419,6 +419,12 @@ img {
   transform: translateZ(20px);
 }
 
+#gerenciadora {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
 /* ==========================================================================
       Sobre Nós
 ========================================================================= */
