alterações no css e na tela cadastro

--- a/src/style.css
+++ b/src/style.css
@@ -716,3 +716,11 @@ text-transform: uppercase;
 }
 
 }
+
+/* ==========================================================================
+      Cadastro
+========================================================================= */
+
+#imagemCadastro{
+  margin-top: 130px;
+}
