tentativa colocar login na nav

--- a/src/style.css
+++ b/src/style.css
@@ -364,6 +364,11 @@ img {
     height: 75px;
     border: 1px solid #ccc;
 }
+
+#acessologin{
+  justify-content: end;
+  display: flex;
+}
 /* ==========================================================================
       HOME
 ========================================================================= */
