--- a/src/style.css
+++ b/src/style.css
@@ -365,6 +365,13 @@ img {
     border: 1px solid #ccc;
 }
 
+#captchaforms{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 #acessologin{
   justify-content: end;
   display: flex;
