--- a/src/style.css
+++ b/src/style.css
@@ -736,3 +736,12 @@ text-transform: uppercase;
 #imagemCadastro{
   margin-top: 130px;
 }
+
+/* ==========================================================================
+      ONDE ESTAMOS
+========================================================================= */
+#centralizar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
