--- a/src/style.css
+++ b/src/style.css
@@ -322,7 +322,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 75vh;
 }
 
 #formularioTrabConosco {
@@ -396,6 +396,43 @@ form button:hover{
   color: #b22222;
   border-radius: 16px;
 }
+
+/* ==========================================================================
+ Mensagem final 
+========================================================================= */
+#mainmensasgem{
+  display: flex;    
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #b22222;
+  flex-direction: column;
+  }
+  
+  #textomensasgem{
+    font-size: 45px;
+    color: #f5f5f5;
+    margin-bottom: 30px;
+  }
+  
+  #paragrafomensagem{
+    color: #f5f5f5;
+    margin-bottom: 50px;
+  }
+  
+  #btnmensagem{
+    padding: 15px 15px;
+    background: #f5f5f5;
+    text-decoration: none;
+    color: #b22222;
+    font-size: 18px;
+    transition: all 0.5s;
+  }
+  
+  #btnmensagem:hover{
+    border-radius: 16px;
+  }
+
 /* ==========================================================================
       HOME
 ========================================================================= */
