--- a/src/style.css
+++ b/src/style.css
@@ -336,9 +336,9 @@ img {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-section h2 {
+section h3 {
   color: #f5f5f5;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   margin: 2rem;
 }
 
@@ -395,6 +395,12 @@ form button:hover{
   background: #f5f5f5;
   color: #b22222;
   border-radius: 16px;
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 /* ==========================================================================
