--- a/src/style.css
+++ b/src/style.css
@@ -348,13 +348,13 @@ section form {
   width: 100%;
 }
 
-form label {
+#identificacaoformulario{
   color: #f5f5f5;
   font-size: 17px;
   margin-bottom: 4px;
 }
 
-form input {
+#preencherformulario{
   padding: 15px;
   outline: none;
   border: 0;
@@ -400,6 +400,48 @@ form button:hover{
   position: fixed;
   bottom: 0;
   width: 100%;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 300px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  display: flex;
+  justify-content: end;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#mensagemlogin{
+  display: flex;
+  justify-content: center;
+
 }
 
 /* ==========================================================================
