--- a/src/style.css
+++ b/src/style.css
@@ -838,7 +838,32 @@ text-transform: uppercase;
 ========================================================================= */
 
 #imagemCadastro{
-  margin-top: 130px;
+  margin-top: 0px;
+}
+
+@media screen and (max-width: 1220px) {
+  #imagemCadastro{
+    display: none;
+  }
+
+  #conteudocadastro{
+    width: 50%;
+  }
+
+  #formscadastro{
+    width: 100%;
+  }
+}
+
+#formscadastro{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px 45px;
+  background-color: #b22222;
+  width: 500px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 /* ==========================================================================
