--- a/src/style.css
+++ b/src/style.css
@@ -348,13 +348,13 @@ section form {
   width: 100%;
 }
 
-#identificacaoformulario {
+.identificacaoformulario {
   color: #f5f5f5;
   font-size: 17px;
   margin-bottom: 4px;
 }
 
-#preencherformulario {
+.preencherformulario {
   padding: 15px;
   outline: none;
   border: 0;
