--- a/src/style.css
+++ b/src/style.css
@@ -847,26 +847,51 @@ form textarea:focus {
 }
 
 #formulariocadastro {
-  width: 50%;
+  width: 500px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px 45px;
+  background-color: #b22222;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 #imagemcadastro {
-  width: 50%;
+  width: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #conteudoformscadastro {
-  width: 50%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 3rem;
+}
+
+.formscadastro{
+  width: 400px;
+  padding: 15px;
+  outline: none;
+  border: 0;
+  margin-bottom: 20px;
+  transition: all 0.5s;
+}
+
+@media screen and (max-width: 1140px){
+
+  #imagemcadastro{
+    display: none;
+  }
+
+  #formulariocadastro{
+    width: 100%;
+    width: 500px;
+  }
 }
 
 /* ==========================================================================
