--- a/src/style.css
+++ b/src/style.css
@@ -902,3 +902,136 @@ form textarea:focus {
   align-items: center;
   justify-content: center;
 }
+
+
+/*==========================================================================
+CADASTRO E LOGIN
+===========================================================================*/
+.formularioLogin {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 80px;
+  border-radius: 15px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+
+.imagemLogin {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.respostaUsuario {
+  padding: 15px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+}
+
+.btncadastro {
+  background-color: red;
+  border: none;
+  padding: 15px;
+  width: 100%;
+  border-radius: 10px;
+  color: white;
+  font-size: 15px
+}
+
+.btncadastro:hover {
+  background-color: rgb(243, 61, 61);
+  cursor: pointer;
+}
+
+#formularioCadastro {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 90px;
+  border-radius: 15px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.CadastroUsuario {
+  padding: 15px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  width: 400px;
+  margin-bottom: 15px;
+}
+
+#mensagemCadastro {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 75px;
+  justify-content: center;
+  display: flex;
+  color: white;
+}
+
+
+
+
+#corpoLogin {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+#formularioLogin {
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+  border-radius: 15px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+#btnEntrar {
+  background-color: red;
+  border: none;
+  padding: 15px;
+  width: 100%;
+  border-radius: 10px;
+  color: white;
+  font-size: 15px;
+
+}
+
+#btnEntrar:hover {
+  background-color: rgb(243, 61, 61);
+  cursor: pointer;
+}
+
+
+#btnDeCadastrar {
+  display: flex;
+  justify-content: end;
+  color: red;
+}
+
+#titulologin {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 75px;
+  justify-content: center;
+  display: flex;
+}
