colocando cards de informações na home

--- a/src/style.css
+++ b/src/style.css
@@ -543,6 +543,12 @@ form textarea:focus {
   text-align: center;
 }
 
+#descubra{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
 /* ==========================================================================
       Sobre Nós
 ========================================================================= */
