--- a/src/style/style.css
+++ b/src/style/style.css
@@ -612,7 +612,6 @@ form textarea {
   width: 100%;
   height: 100px;
   background: linear-gradient(transparent, #3f3f3f);
-
 }
 
 .conteudo h3 {
@@ -1024,4 +1023,8 @@ CADASTRO E LOGIN
   display: flex;
   justify-content: center;
   text-align: center;
+}
+/* Formulário trabalhe conosco */
+#spinner{
+  display: none;
 }
