--- a/src/style/style.css
+++ b/src/style/style.css
@@ -885,19 +885,6 @@ form textarea {
 /*==========================================================================
 CADASTRO E LOGIN
 ===========================================================================*/
-.formularioLogin {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 80px;
-  border-radius: 15px;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
 
 #senha{
   padding: 15px;
@@ -926,10 +913,6 @@ CADASTRO E LOGIN
 
 #formularioCadastro {
   background-color: white;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 90px;
   border-radius: 15px;
   color: #fff;
@@ -967,14 +950,13 @@ CADASTRO E LOGIN
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   background-color: #b22222;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 #formularioLogin {
   background-color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 50px;
   border-radius: 15px;
   color: white;
@@ -982,6 +964,7 @@ CADASTRO E LOGIN
   justify-content: center;
   flex-direction: column;
   width: 450px;
+  margin-top: 90px;
 }
 
 
